added lines for cmd compilation